--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </section>
 
     <section class="main-content">
-      <h1>
+      <p><a href="http://baidu.com/">This link</a> has no title attribute.</p>
+
+<h1>
 <a id="哈哈哈" class="anchor" href="#%E5%93%88%E5%93%88%E5%93%88" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>哈哈哈</h1>
 
 <h1>
